--- a/deeppavlov/configs/multitask/config_glue.json
+++ b/deeppavlov/configs/multitask/config_glue.json
@@ -349,9 +349,9 @@
    },
    "metadata":{
       "variables":{
-         "ROOT_PATH":"~",
+         "ROOT_PATH":"~/.deeppavlov",
          "BACKBONE":"bert-base-uncased",
-         "MODELS_PATH":"{ROOT_PATH}/.deeppavlov/models_glue_clean",
+         "MODELS_PATH":"{ROOT_PATH}/models_glue_clean",
          "SAVE_LOAD_PATH":"{MODELS_PATH}/model_glue",
          "NUM_TRAIN_EPOCHS":5,
          "GRADIENT_ACC_STEPS":1
