--- a/deeppavlov/configs/multitask/config_glue.json
+++ b/deeppavlov/configs/multitask/config_glue.json
@@ -4,7 +4,7 @@
       "path":"glue",
       "reader_class_name":"huggingface_dataset_reader",
       "train":"train",
-      "validation":"validation",
+      "valid":"validation",
       "task_names":[
          "cola",
          "sst2",
