--- a/deeppavlov/configs/multitask/config_superglue.json
+++ b/deeppavlov/configs/multitask/config_superglue.json
@@ -4,7 +4,7 @@
     "path":"super_glue",
     "reader_class_name":"huggingface_dataset_reader",
     "train":"train",
-    "validation":"validation",
+    "valid":"validation",
     "task_names":[
        "wsc",
        "multirc",
